# ntd

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  deny.toml  test_sync.cjs
.github/workflows/: rust.yml
backend/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
backend/src/: agent_progress.rs  config.rs  daemon.rs  executor_service.rs  lib.rs  log_flusher.rs  main.rs  npm_utils.rs  profiles.rs  scheduler.rs  service_context.rs  sys.rs  task_manager.rs  updater.rs
backend/src/adapters/: atomcode.rs  claude_code.rs  codebuddy.rs  codewhale.rs  codex.rs  helpers.rs  hermes.rs  joinai.rs  joinai_event.rs  kilo.rs  kilo_event.rs  kimi.rs  mimo.rs  mimo_event.rs  mobilecoder.rs  mobilecoder_event.rs  mod.rs  models.rs  opencode.rs  pi.rs  pi_event.rs  zhanlu.rs
backend/src/cli/: client.rs  commands.rs  mod.rs
backend/src/daemon/: common.rs  linux.rs  macos.rs  mod.rs  redeploy.rs  windows.rs
backend/src/db/: agent_bot.rs  blackboard.rs  blackboard_page.rs  dashboard.rs  execution.rs  executor_config.rs  feishu_group_whitelist.rs  feishu_home.rs  feishu_message.rs  feishu_project_binding.rs  feishu_push_target.rs  feishu_response_config.rs  loop_.rs  migration.rs  migrations.rs  mod.rs  project_directory.rs  quick_button.rs  review_template.rs  skills.rs  step_.rs  sync_record.rs  tag.rs  todo.rs  todo_template.rs  usage.rs  webhook.rs  workspace_setting.rs  workspace_slash_command.rs
backend/src/db/entity/: agent_bots.rs  blackboard_pages.rs  blackboards.rs  execution_records.rs  executors.rs  feishu_messages.rs  feishu_project_bindings.rs  global_default_hooks.rs  global_hook_config.rs  hook_logs.rs  hooks.rs  loop_executions.rs  loop_step_executions.rs  loop_steps.rs  loop_tags.rs  loop_triggers.rs  loops.rs  mod.rs  project_directories.rs  quick_buttons.rs  review_templates.rs  step_tags.rs  steps.rs  sync_records.rs  todo_hook_rules.rs  todo_hooks.rs  todos.rs  usage_executor_daily.rs  usage_model_breakdown.rs  usage_stats.rs  webhook_records.rs  webhooks.rs  workspace_settings.rs  workspace_slash_commands.rs
backend/src/db/migration/: mod.rs  v1.rs  v2_v5.rs  v41_v46.rs  v47.rs  v47_v53.rs  v48.rs  v49.rs  v50.rs  v51.rs  v52.rs  v53.rs  v54.rs  v55.rs  v56.rs  v57.rs  v58.rs  v59.rs  v60.rs  v61.rs  v62.rs  v63.rs  v64.rs  v65.rs  v66.rs  v67.rs  v68.rs  v69.rs  v70.rs
backend/src/execution_events/: db_adapter.rs  event.rs  extractor.rs  metadata.rs  mod.rs  pipeline.rs
backend/src/execution_events/impls/: atomcode.rs  claude_code.rs  codebuddy.rs  codewhale.rs  codex.rs  default.rs  hermes.rs  kilo.rs  kimi.rs  mimo.rs  mobilecoder.rs  mod.rs  opencode.rs  pi.rs  zhanlu.rs
backend/src/executor_service/: auto_review.rs  completion.rs  events.rs  log_capture.rs  mod.rs  pre_spawn.rs  spawn_lifecycle.rs  stages.rs  types.rs  worktree.rs
backend/src/expert/: index.rs  loader.rs  mod.rs  parser.rs  types.rs
backend/src/feishu/: channel.rs
backend/src/feishu/sdk/: event.rs  message.rs  ws_client.rs
backend/src/git_sync/: mod.rs
backend/src/handlers/: action.rs  agent_bot.rs  backup.rs  blackboard.rs  bundled.rs  config.rs  custom_template.rs  errors.rs  execution.rs  executor_config.rs  experts.rs  feishu_binding.rs  feishu_history.rs  hook.rs  loop_.rs  middleware.rs  mod.rs  profiles.rs  project_directory.rs  quick_button.rs  review_template.rs  scheduler.rs  session.rs  skills.rs  static_handlers.rs  step_.rs  sub_states.rs  sync.rs  tag.rs  todo.rs  todo_template.rs  usage_stats.rs  webhook.rs  workspace_guard.rs
backend/src/hooks/: db.rs  mod.rs  models.rs  service.rs  template.rs
backend/src/models/: loop_.rs  mod.rs  step_.rs
backend/src/profiles/: generators.rs
backend/src/services/: auto_review.rs  auto_update.rs  blackboard.rs  blackboard_debouncer.rs  bundled_sync.rs  channel_registry.rs  feishu_card.rs  feishu_history_fetcher.rs  feishu_listener.rs  feishu_push.rs  incoming_bridge.rs  loop_runner.rs  loop_scheduler.rs  loop_trigger.rs  master_switch.rs  message_debounce.rs  message_router.rs  mod.rs  router_hooks.rs  startup_check.rs  usage_stats.rs  worktree.rs
backend/src/wiki/: fs.rs  index.rs  log.rs  mod.rs
backend/tests/: adapter_extended_tests.rs  api_integration_test.rs  blackboard_cli_tests.rs  business_logic_tests.rs  cli_command_tests.rs  cloud_sync_tests.rs  daemon_redeploy_tests.rs  db_core_coverage_tests.rs  db_feature_supplement_tests.rs  db_helper_tests.rs  db_pool_concurrency_tests.rs  duplicate_loop_tests.rs  execution_events_integration_test.rs  executor_config_tests.rs  executor_tests.rs  feishu_sdk_tests.rs  feishu_tests.rs  handler_tests.rs  hook_tests.rs  loop_expert_tests.rs  loop_step_tests.rs  npm_utils_tests.rs  response_done_signal_tests.rs  scheduler_module_tests.rs  scheduler_tests.rs  services_tests.rs  step_db_tests.rs  todo_progress_tests.rs
deploy/: README.md
deploy/docker-compose/: .env.example  docker-compose.dev.yml  (+2 more)
docs/: ADD_EXECUTOR_GUIDE.md  ANTD_DROPDOWN_FIX.md  ARCHITECTURE_HEALTH_CHECK_REPORT.md  CLI_DESIGN.md  FEATURES.md  NPM_PUBLIST.md  OPTIMIZATION_RECOMMENDATIONS.md  README.md  SPEC.md  WORKSPACE_REFACTOR_ANALYSIS.md  action-button-component.md  action-button-usage-guide.md  architecture.html  code-quality-audit-2026-07.md  dead-code-scan.md  frontend-features.md  help-card-redesign.md  hook-system-design.md  issue_295_pragma_optimize_api_issue.md  loop-blackboard-cli.md  ntd-api.md  ntd-cli.md  ntd-connect-design.md  ntd-connect-dry-run-migration.md  plan-feishu-messaging.md  session-management-design.md  webhook-per-entity-analysis.md
frontend/: MESSAGE_PAGE_REDESIGN.md  animation-optimization-plan.md  check_dashboard.cjs  debug_click.cjs  dist  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
ntd-connect/: Cargo.toml
ntd-connect/src/: agent.rs  channel.rs  dispatcher.rs  lib.rs  router.rs  session.rs  types.rs
ntd-connect/src/platform/: feishu.rs  mod.rs
ntd-connect/tests/: dispatcher_burst.rs  dispatcher_pipeline.rs
script/: npm_publish.sh
(+576 files in other folders)
