[workspace]
# 解决 workspace 内的版本对齐与 feature 复用问题；resolver = "2" 让
# features 在成员之间不再被强制统一，避免引入不需要的传递依赖。
resolver = "2"
# 成员清单。backend 已有自己的 [package] 块，加入 workspace 后
# `cargo build` 从根目录会构建全部成员；`cd backend && cargo build`
# 仍按原行为工作，只构建 backend（ntd-connect 作为 workspace 依赖解析）。
members = ["backend", "ntd-connect"]

# M2+ 再引入 [workspace.dependencies] 共享版本；M1 阶段各 crate 独立声明依赖，
# 避免一次性触碰 backend/Cargo.toml 引入回归。
