[package]
name = "ntd"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
regex = "1"
dirs = "5"
tokio-cron-scheduler = "0.13"
cron = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "compression-gzip"] }
parking_lot = "0.12"
command-group = { version = "5", features = ["with-tokio"] }
zip = "2"
prost = "0.13"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
quick_cache = "0.6"
futures-util = "0.3"
tokio-stream = "0.1"
url = "2"
thiserror = "2"
log = "0.4"
dashmap = "6"
which = "7"
rusqlite = { version = "0.30", features = ["bundled"] }
# MIME 类型推断库：根据文件扩展名返回标准 MIME，避免手写 if-else 漏覆盖、大小写敏感等问题。
# 选用 2.x，与既有 `mime` 生态（http::HeaderValue）兼容。
mime_guess = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
cargo-watch = "8"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
vergen-gitcl = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Issue #495 clippy lint: 同时作用于 lib 和 bin crate（包括 main.rs）。
# 之前在 `lib.rs` 写 `#![warn(clippy::unwrap_used, ...)]` 只对 lib crate 生效，
# main.rs / 子命令 handler 里的 `.unwrap()` 仍然 silent pass。这里用
# Cargo workspace 级 `[lints.clippy]`，是单一真值来源，覆盖所有 target。
[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
