[package]
name = "ntd"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
regex = "1"
dirs = "5"
tokio-cron-scheduler = "0.13"
cron = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "compression-gzip"] }
parking_lot = "0.12"
command-group = { version = "5", features = ["with-tokio"] }
zip = "2"
prost = "0.13"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
quick_cache = "0.6"
futures-util = "0.3"
tokio-stream = "0.1"
url = "2"
thiserror = "2"
log = "0.4"
dashmap = "6"
which = "7"
rusqlite = { version = "0.30", features = ["bundled"] }
# MIME 类型推断库：根据文件扩展名返回标准 MIME，避免手写 if-else 漏覆盖、大小写敏感等问题。
# 选用 2.x，与既有 `mime` 生态（http::HeaderValue）兼容。
mime_guess = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
cargo-watch = "8"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
vergen-gitcl = "1"

# ----------------------------------------------------------------------
# Lint 策略
# ----------------------------------------------------------------------
# 对应 issue #495：把生产代码里的 `.unwrap()` / `.expect()` 收紧。
#
# 渐进式收紧计划（不要一次 deny，会让 PR 太大无法合入）：
# - 阶段 1（本次 PR）：把所有 panic 类 lint 设为 warn，让 CI 把现有 263+
#   处违规全部列出来作为后续 cleanup backlog
# - 阶段 2（后续 PR）：按模块分批替换为 `?` 或 `match`，每合入一批把对应
#   lint 升回 deny
# - 单测代码 (`#[cfg(test)]`) 不在本 lint 范围内（panic 是合理失败模式）
# - build.rs 不在本 lint 范围内（panic 是合理失败模式）
# - 不开 `print_stdout` / `print_stderr` —— daemon CLI 子命令本来就需要
#   打 stdout/stderr 让用户看状态
# - 暂时不开 `unsafe_code = "deny"`，项目里有 libc FFI 调用是必须的，
#   后续可以单独治理（集中到 `sys` 模块后再开 deny）。
[lints.clippy]
# 先 warn，等后续 PR 替换完再升级到 deny
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
# 其他常见误用
todo = "warn"
dbg_macro = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
