[package]
name = "ntd"
version = "0.1.0"
edition = "2021"
# 最低支持 Rust 版本。CI 矩阵与 CONTRIBUTING.md 均以此为准；
# 升级时务必确认依赖未引入更高 MSRV。
rust-version = "1.81"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
yaml-rust2 = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
regex = "1"
dirs = "5"
tokio-cron-scheduler = "0.13"
cron = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "compression-gzip"] }
parking_lot = "0.12"
command-group = { version = "5", features = ["with-tokio"] }
zip = "2"
prost = "0.13"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
quick_cache = "0.6"
futures-util = "0.3"
tokio-stream = "0.1"
url = "2"
thiserror = "2"
log = "0.4"
dashmap = "6"
which = "7"
semver = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
# MIME 类型推断库：根据文件扩展名返回标准 MIME，避免手写 if-else 漏覆盖、大小写敏感等问题。
# 选用 2.x，与既有 `mime` 生态（http::HeaderValue）兼容。
mime_guess = "2"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
# wait-timeout：给 WorktreeService 的 git 子命令加超时，避免 git 在持有锁 / I/O 卡顿时无限阻塞。
# 已经在 lockfile 里作为传递依赖存在，直接 pin 为主依赖避免被传递路径剔除。
wait-timeout = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
# Property-based testing: 对纯函数 (replace_placeholders / normalize_single_path /
# convert_cron_to_utc) 自动生成输入,验证不变量 (idempotency / round-trip / format)。
# 比手写单元测试覆盖更多边界。issue #514 引入。
proptest = "1"

[build-dependencies]
vergen-gitcl = "1"

# ----------------------------------------------------------------------
# Lint 策略
# ----------------------------------------------------------------------
# 对应 issue #495：把生产代码里的 `.unwrap()` / `.expect()` 收紧。
#
# 渐进式收紧计划（不要一次 deny，会让 PR 太大无法合入）：
# - 阶段 1（本次 PR）：把所有 panic 类 lint 设为 warn，让 CI 把现有 263+
#   处违规全部列出来作为后续 cleanup backlog
# - 阶段 2（后续 PR）：按模块分批替换为 `?` 或 `match`，每合入一批把对应
#   lint 升回 deny
# - 单测代码 (`#[cfg(test)]`) 不在本 lint 范围内（panic 是合理失败模式）
# - build.rs 不在本 lint 范围内（panic 是合理失败模式）
# - 不开 `print_stdout` / `print_stderr` —— daemon CLI 子命令本来就需要
#   打 stdout/stderr 让用户看状态

[profile.release]
lto = true
codegen-units = 1
strip = true

# =============================================================================
# Lint 策略
# 目的：
# 1. 把"宽松"lint 在编译期变成 warning，引导新代码主动规避；
# 2. 把"绝对禁止"lint（unwrap_used / expect_used / panic / unsafe_code）升级到 deny，
#    但允许在 sys 模块局部放行（见 src/sys.rs 中的 #![allow(unsafe_code)]）。
# 3. CI 跑 `cargo clippy --all-targets -- -D warnings`，确保 warning 也被拒绝。
# 新加 lint 时请在 CONTRIBUTING.md 的「Lint 策略」一节同步登记。
# =============================================================================
[lints.clippy]
# 谨慎类：列出常见但不一定 bug 的模式，warning 提醒即可
too_many_arguments = "warn"
result_large_err = "warn"
needless_pass_by_value = "warn"
# 性能类
needless_collect = "warn"
redundant_clone = "warn"
# 正确性类（warn only：deny 会让存量 build.rs / tests/*.rs 全部触发 E0001,
# 后续 PR 单独把存量 .unwrap()/.expect() 迁移为 ? / match 后再升 deny）
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

[lints.rust]
# unsafe_code 在 lib.rs 顶部 #![deny(unsafe_code)]，sys.rs 中 #![allow(unsafe_code)] 例外。
# 这里再额外加一行 package 级，确保 build script 与 integration test 也不会冒出裸 unsafe。
unsafe_code = "deny"
# `unsafe_op_in_unsafe_fn` 在 Rust 1.82 稳定（issue #125626），与本 crate 的
# `rust-version = "1.75"` 不兼容：旧 toolchain 会把它当作 unknown lint 报 warning。
# 升级 MSRV 时再启用此项。
# unsafe_op_in_unsafe_fn = "warn"
#
# missing_debug_implementations / missing_docs 当前产生 2000+ 条警告，
# 统一降为 allow；新增模块/结构体时逐步补齐 Debug 和文档。
missing_debug_implementations = "allow"
missing_docs = "allow"
